# POS-hadik

./: README.md  client.c  main.c  server.c
src/: CMakeLists.txt  client.c  client.h  menu.c  menu.h  server.c  server.h  snake.c  snake.h  utils.h
